@@ -1,4 +1,4 @@
-AC_INIT(igraph, 0.4.3, csardi@rmki.kfki.hu)
+AC_INIT(igraph, 0.4.4, csardi@rmki.kfki.hu)
 AC_CONFIG_SRCDIR(src/rinterface.c)
 
 AC_PROG_CC
@@ -8,6 +8,11 @@ AC_SUBST(HAVE_FMEMOPEN)
 
 AC_CHECK_FUNCS(open_memstream, [HAVE_OPEN_MEMSTREAM=1], [HAVE_OPEN_MEMSTREAM=0])
 AC_SUBST(HAVE_OPEN_MEMSTREAM)
+
+LIBS_SAVE=$LIBS
+LIBS="$LIBS -lm"
+AC_CHECK_FUNCS([rintf])
+LIBS=$LIBS_SAVE
 
 graphml_support=yes
 AC_ARG_ENABLE(graphml,
