@@ -9,6 +9,11 @@ AC_SUBST(HAVE_FMEMOPEN)
 AC_CHECK_FUNCS(open_memstream, [HAVE_OPEN_MEMSTREAM=1], [HAVE_OPEN_MEMSTREAM=0])
 AC_SUBST(HAVE_OPEN_MEMSTREAM)
 
+LIBS_SAVE=$LIBS
+LIBS="$LIBS -lm"
+AC_CHECK_FUNCS([rintf])
+LIBS=$LIBS_SAVE
+
 graphml_support=yes
 AC_ARG_ENABLE(graphml,
               AC_HELP_STRING([--disable-graphml], [Disable support for GraphML format]),
