@@ -1,7 +1,20 @@
 #! /bin/sh
+
 if test -z "$LIB_XML" ; then
-  LIB_XML="D:/cygwin/home/duncan"
+  echo "Please define LIB_XML (and LIB_ZLIB)"
+  exit 1
 fi
+
+if test -z "$LIB_ZLIB" ; then
+  echo "Please define LIB_ZLIB"
+  exit 1
+fi
+
+#if test -z "$LIB_ICONV" ; then  
+#  echo "Please define LIB_ICONV"
+#  exit 1
+#fi
+
 mkdir $DPKG/libs
-cp $LIB_XML/lib/libxml2.dll $DPKG/libs
-cp $LIB_XML/lib/zlib1.dll $DPKG/libs
+cp $LIB_ZLIB/bin/zlib1.dll $DPKG/libs
+cp $LIB_XML/bin/libxml2.dll $DPKG/libs
