@@ -1,13 +1,11 @@
 
 XML_INC_DIR=${LIB_XML}/include
-XML_LIB_DIR=${LIB_XML}/lib
+XML_LIB_DIR=${LIB_XML}/bin
 
 ifndef LIB_ICONV
  LIB_ICONV=.
 endif
 
 
-PKG_CPPFLAGS= -DUSING_R -DHAVE_FMEMOPEN=0 -DHAVE_OPEN_MEMSTREAM=0 -DWin32 -DHAVE_LIBXML -Wall -I ${XML_INC_DIR} -I ${LIB_ICONV} -I c:/libxml/include
-PKG_LIBS= -L ${XML_LIB_DIR} -L c:/libxml/lib -lxml2 
-
-
+PKG_CPPFLAGS= ${XML_INC_DIR:%=-I%} -I${LIB_XML}/include/libxml2 -DUSING_R -DHAVE_FMEMOPEN=0 -DHAVE_OPEN_MEMSTREAM=0 -DHAVE_RINTF -DWin32 -DHAVE_LIBXML -Wall -I${LIB_ICONV}/include -I${LIB_ICONV}
+PKG_LIBS= -L${XML_LIB_DIR} -L${XML_LIB_DIR}/../lib -lxml2 
